feat: table add border

--- a/template.html
+++ b/template.html
@@ -3,6 +3,11 @@
 <head>
     <title>{% TITLE %}</title>
     <meta charset="UTF-8">
+<style>
+table, th, td {
+  border: 1px solid black;
+}
+</style>
     {% ADDITIONAL_HEADERS %}
 </head>
 <body>
